--- a/index.html
+++ b/index.html
@@ -17,13 +17,30 @@
         <h3>iCloud</h3>
         <section class="folder-buttons">
             <button id="noteBtn"><i class="fa fa-folder"></i>Notes</button>
-            <span>
-                
-            </span>
-            
+            <span></span>
             <button id="deletedBtn"><i class="fa fa-trash"></i>Recently Deleted</button>
         </section>
     </main>
+
+    <section class="notes">
+        <header>
+            <nav class="notes-nav">
+                <i class="fa fa-angle-left" id="return"></i>
+                <i class="fa fa-ellipsis"></i>
+            </nav>
+        </header>
+
+        <section class="notes-meta">
+            <h1>Notes</h1>
+            <h5>11 Notes</h5>
+            <h3>Today</h3>
+        </section>
+        <section class="notes-grid">
+            <div class="note-card">
+
+            </div>
+        </section>
+    </section>
     <section class="footer">
         <section class="search-bar">
           <input type="text" placeholder="search">
